WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127057
[CSS Grid Layout] minmax() should be a CSSFunction instead of a CSSValueList
https://bugs.webkit.org/show_bug.cgi?id=127057
Summary
[CSS Grid Layout] minmax() should be a CSSFunction instead of a CSSValueList
Sergio Villar Senin
Reported
2014-01-15 10:41:14 PST
We're internally treating the minmax() function as a list of CSSValue instead of a CSSFunction. The problem with that is that a declaration like -webkit-grid-definition-columns: minmax(10px, 50px) will be transformed, when asking for "element.style.webkitGridDefinitionColumns" in "10px 50px" i.e. a string with a list of values instead of "minmax(10px, 50px)" which is the correct value in this case.
Attachments
Patch
(18.52 KB, patch)
2014-01-20 09:12 PST
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2
(475.47 KB, application/zip)
2014-01-20 09:59 PST
,
Build Bot
no flags
Details
Patch
(32.00 KB, patch)
2014-01-20 10:17 PST
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2014-01-15 10:42:43 PST
Setting a dependency as I prefer the dependency to land first as it will drastically simplify the patch for this test (significantly reducing the amount of code for the tests)
Sergio Villar Senin
Comment 2
2014-01-20 09:12:21 PST
Created
attachment 221663
[details]
Patch
Sergio Villar Senin
Comment 3
2014-01-20 09:13:45 PST
Comment on
attachment 221663
[details]
Patch Forgot to upload some missing pieces, new patch to come...
Build Bot
Comment 4
2014-01-20 09:59:24 PST
Comment on
attachment 221663
[details]
Patch
Attachment 221663
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5857543372931072
New failing tests: fast/css-grid-layout/grid-columns-rows-get-set-multiple.html fast/css-grid-layout/grid-columns-rows-get-set.html fast/css-grid-layout/named-grid-line-get-set.html
Build Bot
Comment 5
2014-01-20 09:59:26 PST
Created
attachment 221668
[details]
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Sergio Villar Senin
Comment 6
2014-01-20 10:17:59 PST
Created
attachment 221670
[details]
Patch
Sergio Villar Senin
Comment 7
2014-01-29 02:52:17 PST
Comment on
attachment 221670
[details]
Patch Clearing flags on attachment: 221670 Committed
r163013
: <
http://trac.webkit.org/changeset/163013
>
Sergio Villar Senin
Comment 8
2014-01-29 02:52:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug